bug 628917 - avoid rebuilding the font list repeatedly, by only handling WM_FONTCHANGE for the hidden window. r=jdaggett